ARGO-1297 Remove deprecated package auth_methods and its uses
