# handlers/auth_method_handlers.go
@@ -1,216 +1,0 @@
-package handlers
-
-import (
-	"encoding/json"
-	"fmt"
-	"github.com/ARGOeu/argo-api-authn/auth-methods"
-	"github.com/ARGOeu/argo-api-authn/config"
-	"github.com/ARGOeu/argo-api-authn/servicetypes"
-	"github.com/ARGOeu/argo-api-authn/stores"
-	"github.com/ARGOeu/argo-api-authn/utils"
-	"github.com/gorilla/context"
-	"github.com/gorilla/mux"
-	"net/http"
-)
-
-// Deprecated:
-func DeprecatedAuthMethodCreate(w http.ResponseWriter, r *http.Request) {
-
-	var err error
-	var authM map[string]interface{}
-	var serviceType servicetypes.ServiceType
-	var ok bool
-	var flag bool
-	var typeM string
-	var i interface{}
-
-	//context references
-	store := context.Get(r, "stores").(stores.Store)
-	cfg := context.Get(r, "config").(config.Config)
-
-	// check the validity of the JSON
-	if err = json.NewDecoder(r.Body).Decode(&authM); err != nil {
-		err := utils.APIErrBadRequest(err.Error())
-		utils.RespondError(w, err)
-		return
-	}
-
-	if len(authM) == 0 {
-		err = utils.APIErrInvalidFieldContent("all fields", "Empty request body")
-		utils.RespondError(w, err)
-		return
-	}
-
-	// required variables for every type of auth method
-	if i, ok = authM["type"]; ok == false {
-		err = utils.APIErrEmptyRequiredField("api-key-auth", "type was not found in the request body")
-		utils.RespondError(w, err)
-		return
-	}
-	typeM = i.(string)
-
-	// check if the type is supported by the authn service
-	flag = false
-	for _, am := range cfg.SupportedAuthMethods {
-		if am == typeM {
-			flag = true
-			break
-		}
-	}
-	if !flag {
-		err = utils.APIErrUnsupportedContent("type", typeM, fmt.Sprintf("Supported:%v", cfg.SupportedAuthMethods))
-		utils.RespondError(w, err)
-		return
-	}
-
-	if _, ok = authM["service_uuid"]; ok == false {
-		err = utils.APIErrEmptyRequiredField("api-key-auth", "service_uuid was not found in the request body")
-		utils.RespondError(w, err)
-		return
-	}
-
-	if _, ok = authM["host"]; ok == false {
-		err = utils.APIErrEmptyRequiredField("api-key-auth", "host was not found in the request body")
-		utils.RespondError(w, err)
-		return
-	}
-
-	if _, ok = authM["port"]; ok == false {
-		err = utils.APIErrEmptyRequiredField("api-key-auth", "port was not found in the request body")
-		utils.RespondError(w, err)
-		return
-	}
-
-	if _, ok = authM["path"]; ok == false {
-		err = utils.APIErrEmptyRequiredField("api-key-auth", "path was not found in the request body")
-		utils.RespondError(w, err)
-		return
-	}
-
-	// check if the serviceType exists
-	if serviceType, err = servicetypes.FindServiceTypeByUUID(authM["service_uuid"].(string), store); err != nil {
-		utils.RespondError(w, err)
-		return
-	}
-
-	// check if the host exists
-	if !serviceType.HasHost(authM["host"].(string)) {
-		err = utils.APIErrNotFound("Host")
-		utils.RespondError(w, err)
-		return
-	}
-
-	// check if the serviceType supports this kind of auth method
-	if serviceType.AuthMethod != typeM {
-		err = utils.APIErrUnsupportedContent("type", typeM, fmt.Sprintf("Supported:%v", serviceType.AuthMethod))
-		utils.RespondError(w, err)
-		return
-	}
-
-	// checks if the serviceType on the given host has already an auth method declared
-	// use the appropriate finder for the type of auth method
-	authMFinder := auth_methods.AuthMethodFinders[typeM]
-
-	if _, err := authMFinder(authM["service_uuid"].(string), authM["host"].(string), store); err == nil {
-		err = utils.APIErrConflict("auth-method", "service_uuid", authM["service_uuid"].(string))
-		utils.RespondError(w, err)
-		return
-	}
-	// find the appropriate creator method
-	authMCreator := auth_methods.AuthMethodCreators[typeM]
-	if authM, err = authMCreator(authM, store); err != nil {
-		utils.RespondError(w, err)
-		return
-	}
-
-	// if everything went ok, reflect the created object
-	utils.RespondOk(w, 201, authM)
-}
-
-// Deprecated:
-func DeprecatedAuthMethodListOne(w http.ResponseWriter, r *http.Request) {
-
-	var err error
-	var authM map[string]interface{}
-	var service servicetypes.ServiceType
-
-	//context references
-	store := context.Get(r, "stores").(stores.Store)
-
-	// url vars
-	vars := mux.Vars(r)
-
-	// check if the service exists
-	if service, err = servicetypes.FindServiceTypeByName(vars["service"], store); err != nil {
-		utils.RespondError(w, err)
-		return
-	}
-
-	// check if the host exists
-	if !service.HasHost(vars["host"]) {
-		err = utils.APIErrNotFound("Host")
-		utils.RespondError(w, err)
-		return
-	}
-
-	// depending on the service's declared auth method, grab the respective finder
-	authMFinder := auth_methods.AuthMethodFinders[service.AuthMethod]
-
-	if authM, err = authMFinder(service.UUID, vars["host"], store); err != nil {
-		utils.RespondError(w, err)
-		return
-	}
-
-	// if everything went ok, return the auth method
-	utils.RespondOk(w, 200, authM)
-}
-
-// Deprecated:
-func DeprecatedAuthMethodListAll(w http.ResponseWriter, r *http.Request) {
-
-	var authMList auth_methods.AuthMethodsList
-	var err error
-
-	//context references
-	store := context.Get(r, "stores").(stores.Store)
-
-	if authMList, err = auth_methods.FindAllAuthMethods(store); err != nil {
-		utils.RespondError(w, err)
-		return
-	}
-
-	utils.RespondOk(w, 200, authMList)
-}
-
-// Deprecated: //
-func DeprecatedAuthMethodDelete(w http.ResponseWriter, r *http.Request) {
-
-	var err error
-	var serviceType servicetypes.ServiceType
-
-	//context references
-	store := context.Get(r, "stores").(stores.Store)
-
-	// url vars
-	vars := mux.Vars(r)
-
-	// check if the service type exists
-	if serviceType, err = servicetypes.FindServiceTypeByName(vars["service-type"], store); err != nil {
-		utils.RespondError(w, err)
-		return
-	}
-
-	// check if the host exists
-	if !serviceType.HasHost(vars["host"]) {
-		err = utils.APIErrNotFound("Host")
-		utils.RespondError(w, err)
-		return
-	}
-
-	if err = auth_methods.DeleteAuthMethod(serviceType.UUID, vars["host"], serviceType.AuthMethod, store); err != nil {
-		utils.RespondError(w, err)
-		return
-	}
-
-	utils.RespondOk(w, 204, nil)
-}
